# dioxus-play

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  main.css  tailwind.config.js
src/: audio_control.rs  main.rs  net.rs  shortcuts.rs  starred_songs.rs
