[package]
name = "dioxus-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = "0.11.18"
rodio = "0.17.1"
