[package]
name = "dioxus-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-logger = "0.4.1"
futures-util = "0.3.28"
log = "0.4.20"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
rodio = "0.17.1"
serde = "1.0.185"
serde_json = "1.0.105"
